# crow-code

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SOURCE_DUMP.md  build_patch_anth.py  build_patch_client.py  patch_applier.patch  sandbox_test  sandbox_test.rs  sandbox_tui.rs  scratch.py  scratch_apply.rs  scratch_event.rs  scratch_mod.rs  scratch_resume.rs  scratch_runtime_unify.patch  source_dump.sh  source_dump.txt  test_env_leak.sh
.githooks/: pre-commit
crates/crow-brain/: Cargo.toml
crates/crow-brain/src/: anthropic.rs  autodream.rs  client.rs  compactor.rs  compiler.rs  lib.rs  model_registry.rs  prompt.rs  router.rs  schema.rs  skill.rs  usage.rs
crates/crow-cli/: Cargo.toml  test_tui.rs
crates/crow-cli/src/: bin_test.rs  budget.rs  chat.rs  config.rs  context.rs  crucible.rs  crucible_runner.rs  diff.rs  dotenv.rs  epistemic.rs  epistemic_ui.rs  event.rs  evidence_report.rs  file_state.rs  legacy_god.rs  main.rs  mcp.rs  mcts.rs  prompt.rs  render.rs  runtime.rs  session.rs  snapshot.rs  subagent.rs  thread_manager.rs  tui.rs
crates/crow-cli/src/tui/: app.rs  commands.rs  component.rs  dashboard.rs  event_loop.rs  markdown_stream.rs  mod.rs  render.rs  shimmer.rs  state.rs  stream_controller.rs  terminal_title.rs  theme.rs
crates/crow-cli/src/tui/components/: chat_view.rs  command_palette.rs  composer.rs  history.rs  info_bar.rs  mod.rs
crates/crow-cli/tests/: autonomous_loop_integration.rs  dry_run_integration.rs  graceful_exit.rs  metrics_benchmark.rs
crates/crow-commands/: Cargo.toml
crates/crow-commands/src/: lib.rs
crates/crow-evidence/: Cargo.toml
crates/crow-evidence/src/: lib.rs  types.rs
crates/crow-intel/: Cargo.toml
crates/crow-intel/src/: lib.rs  pagerank.rs  skeleton.rs  walker.rs
crates/crow-materialize/: Cargo.toml
crates/crow-materialize/src/: driver.rs  lib.rs  types.rs
crates/crow-mcp/: Cargo.toml
crates/crow-mcp/src/: client.rs  lib.rs  transport.rs  types.rs
crates/crow-mcp/tests/: stdio_test.rs
crates/crow-patch/: Cargo.toml
crates/crow-patch/src/: lib.rs  types.rs  util.rs
crates/crow-probe/: Cargo.toml
crates/crow-probe/src/: lib.rs  scanner.rs  types.rs
crates/crow-replay/: Cargo.toml
crates/crow-replay/src/: lib.rs
crates/crow-runtime/: Cargo.toml
crates/crow-runtime/src/: agent_loop.rs  agents_md.rs  cancel.rs  context.rs  epistemic.rs  event.rs  file_state.rs  lib.rs  mcp.rs  registry.rs  session.rs  subagent.rs  turn_diff.rs
crates/crow-tools/: Cargo.toml
crates/crow-tools/src/: background.rs  bash.rs  bash_validation.rs  diff_utils.rs  file_edit.rs  file_lock.rs  file_safety.rs  file_state.rs  file_write.rs  glob.rs  grep.rs  lib.rs  parallel.rs  permission.rs  recon.rs  subagent.rs  truncation.rs
crates/crow-verifier/: Cargo.toml
crates/crow-verifier/src/: aci.rs  executor.rs  lib.rs  preflight.rs  semantic_compress.rs  types.rs
crates/crow-workspace/: Cargo.toml
crates/crow-workspace/src/: applier.rs  hydrator.rs  ledger.rs  lib.rs  sandbox.rs
docs/: RFC-001-Architecture-Baseline.md
