[workspace]
members = [
    # 💎 The Currencies — system-wide data primitives
    "crates/crow-patch",
    "crates/crow-evidence",
    "crates/crow-probe",

    # 🗄️ L1: The Runtime
    "crates/crow-workspace",
    "crates/crow-materialize",

    # ⚖️ L2: The Crucible
    "crates/crow-verifier",

    # 👁️ L3: The Intelligence
    "crates/crow-intel",

    # 🧠 L4: The Reasoning
    "crates/crow-brain",

    # 🖥️ L5: The Interface & Observability
    "crates/crow-cli",
    "crates/crow-replay", "crates/crow-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.lints.clippy]
collapsible_if = "deny"
collapsible_else_if = "deny"
expect_used = "warn"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "warn"
