[package]
name = "crow-brain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crow-patch = { path = "../crow-patch" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
