[package]
name = "crow-brain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crow-patch = { path = "../crow-patch" }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
schemars = "1.2.1"
chrono = { version = "0.4.44", features = ["serde"] }
anyhow = "1.0.102"
eventsource-stream = "0.2.3"
futures-util = "0.3.32"
serde_yaml = "0.9"
tracing = "0.1.44"

[lints]
workspace = true
