[package]
name = "crow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crow"
path = "src/main.rs"

[dependencies]
crow-materialize = { version = "0.1.0", path = "../crow-materialize" }
crow-patch = { version = "0.1.0", path = "../crow-patch" }
crow-probe = { version = "0.1.0", path = "../crow-probe" }
crow-verifier = { version = "0.1.0", path = "../crow-verifier" }
crow-workspace = { version = "0.1.0", path = "../crow-workspace" }
crow-intel = { path = "../crow-intel" }
crow-brain = { path = "../crow-brain" }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
similar = "2.6"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
async-trait = "0.1"
crow-brain = { path = "../crow-brain" }
crow-materialize = { path = "../crow-materialize" }
crow-patch = { path = "../crow-patch" }
crow-probe = { path = "../crow-probe" }
crow-verifier = { path = "../crow-verifier" }
crow-workspace = { path = "../crow-workspace" }
