[package]
name = "crow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crow"
path = "src/main.rs"

[dependencies]
crow-materialize = { version = "0.1.0", path = "../crow-materialize" }
crow-patch = { version = "0.1.0", path = "../crow-patch" }
crow-probe = { version = "0.1.0", path = "../crow-probe" }
crow-verifier = { version = "0.1.0", path = "../crow-verifier" }
crow-workspace = { version = "0.1.0", path = "../crow-workspace" }
crow-intel = { path = "../crow-intel" }
crow-brain = { path = "../crow-brain" }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
similar = "2.6"
anyhow = "1"
crow-evidence = { version = "0.1.0", path = "../crow-evidence" }
crow-mcp = { version = "0.1.0", path = "../crow-mcp" }
reqwest = { version = "0.13.2", features = ["default-tls"] }
chrono = "0.4.44"
ratatui = "0.26.1"
tui-textarea = "0.4.0"
crossterm = "0.27.0"
rustyline = "14.0"
indicatif = "0.17.8"
console = "0.15.11"
pulldown-cmark = "0.13"
syntect = "5"
dirs = "6.0.0"
textwrap = "0.16.2"
arc-swap = "1.9.1"
tokio-util = "0.7.18"
strip-ansi-escapes = "0.2.1"
lazy_static = "1.5.0"
crow-commands = { version = "0.1.0", path = "../crow-commands" }
crow-runtime = { version = "0.1.0", path = "../crow-runtime" }
crow-tools = { version = "0.1.0", path = "../crow-tools" }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
crow-brain = { path = "../crow-brain" }
crow-materialize = { path = "../crow-materialize" }
crow-patch = { path = "../crow-patch" }
crow-evidence = { path = "../crow-evidence" }

crow-probe = { path = "../crow-probe" }
crow-verifier = { path = "../crow-verifier" }
crow-workspace = { path = "../crow-workspace" }

[lints]
workspace = true
