[package]
name = "crow-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["process", "io-util", "sync", "macros", "rt-multi-thread"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.93"
thiserror = "2.0.3"

[dev-dependencies]
tempfile = "3.14.0"

[lints]
workspace = true
