[package]
name = "crow-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crow-materialize = { version = "0.1.0", path = "../crow-materialize" }
crow-patch = { version = "0.1.0", path = "../crow-patch" }
crow-probe = { version = "0.1.0", path = "../crow-probe" }
crow-verifier = { version = "0.1.0", path = "../crow-verifier" }
crow-workspace = { version = "0.1.0", path = "../crow-workspace" }
crow-intel = { path = "../crow-intel" }
crow-brain = { path = "../crow-brain" }
crow-evidence = { version = "0.1.0", path = "../crow-evidence" }
crow-mcp = { version = "0.1.0", path = "../crow-mcp" }
crow-tools = { version = "0.1.0", path = "../crow-tools" }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
chrono = "0.4.44"
dirs = "6.0.0"
arc-swap = "1.9.1"
tokio-util = "0.7.18"
uuid = { version = "1.23.1", features = ["v4"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.10"
