[package]
name = "crow-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
globset = "0.4"
ignore = "0.4"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.2", features = ["default-tls"] }
similar = "2.6"
tracing = "0.1"
crow-patch = { version = "0.1.0", path = "../crow-patch" }
crow-verifier = { version = "0.1.0", path = "../crow-verifier" }
crow-probe = { version = "0.1.0", path = "../crow-probe" }
tempfile = "3.15"
[lints]
workspace = true

[dev-dependencies]
tempfile = "3.15"
