[package]
name = "crow-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crow-evidence = { path = "../crow-evidence" }
crow-probe = { path = "../crow-probe" }
serde_json = "1"
tokio = { version = "1.51.1", features = ["process", "time", "rt-multi-thread", "macros", "io-util"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
