[package]
name = "crow-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crow-materialize = { version = "0.1.0", path = "../crow-materialize" }
crow-patch = { version = "0.1.0", path = "../crow-patch" }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
