[package]
name = "crow-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crow-materialize = { version = "0.1.0", path = "../crow-materialize" }
crow-patch = { version = "0.1.0", path = "../crow-patch" }
sha2 = "0.11.0"
thiserror = "2.0.18"

[dev-dependencies]
serde_json = "1.0.149"
tempfile = "3.27.0"
