[package]
name = "crow-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
crow-materialize = { version = "0.1.0", path = "../crow-materialize" }
crow-patch = { version = "0.1.0", path = "../crow-patch" }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"

[dev-dependencies]
serde_json = "1.0.149"
tempfile = "3.27.0"

[lints]
workspace = true
